MDEV-10181 Illegal mix of collation for a field and an ASCII string as a view field